--- a/blogsfolder/blogs.html
+++ b/blogsfolder/blogs.html
@@ -197,39 +197,38 @@
             <li>	Light Cream: #FAF8D4</li>
             These colours are meant to create a calm and approachable vibe, which is ideal for a portfolio that aims to be both professional and welcoming.
             <a href="#BlogTitle"> back to top</a>
-            <li><img class="u-photo"
-            src="../images/ColourPallete.png"
-            width="250"
-            height="250" 
-            alt="Colour pallete i will use"
-            /></li>
-            The wireframes for my current bare bones html website is as follows 
-            <li><img class="u-photo"
-            src="../images/HomepageScreenshot.png"
-            width="250"
-            height="250" 
-            alt="wireframe for homepage"
-            /></li>
-            
-            <li><img class="u-photo"
-            src="../images/BlogsScreenshot.png"
-            width="250"
-            height="250" 
-            alt="wireframe for homepage"
-            /></li>
-            <li><img class="u-photo"
-            src="../images/DesignScreenshot.png"
-            width="250"
-            height="250" 
-            alt="wireframe for homepage"
-            /></li>
-            <li><img class="u-photo"
-            src="../images/DevScreensShot.png"
-            width="250"
-            height="250" 
-            alt="wireframe for homepage"
-            /></li>
-        </p>
+            <ul>
+                <li>
+                  <figure>
+                    <img class="u-photo" src="../images/ColourPallete.png" width="250" height="250" alt="Colour palette I will use">
+                    <figcaption>Colour palette I will use for the website design.</figcaption>
+                  </figure>
+                </li>
+                <li>
+                  <figure>
+                    <img class="u-photo" src="../images/HomepageScreenshot.png" width="250" height="250" alt="Wireframe for homepage">
+                    <figcaption>Wireframe layout for the homepage of the site. A simple layout that serves as just an Introduction.</figcaption>
+                  </figure>
+                </li>
+                <li>
+                  <figure>
+                    <img class="u-photo" src="../images/BlogsScreenshot.png" width="250" height="250" alt="Wireframe for blogs">
+                    <figcaption>Wireframe showing how the blogs section will be structured.</figcaption>
+                  </figure>
+                </li>
+                <li>
+                  <figure>
+                    <img class="u-photo" src="../images/DesignScreenshot.png" width="250" height="250" alt="Wireframe for design">
+                    <figcaption>Wireframe for the design showcase page. This page focuses on how I designed the website.</figcaption>
+                  </figure>
+                </li>
+                <li>
+                  <figure>
+                    <img class="u-photo" src="../images/DevScreensShot.png" width="250" height="250" alt="Wireframe for dev">
+                    <figcaption>Wireframe for the portfolio section, where I focus on what projects I have worked on.</figcaption>
+                  </figure>
+                </li>
+              </ul>
     </article>
     <a href="#BlogTitle"> back to top</a>
     <footer>
