--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ali Raffee | Projects and Dev Work</title>
@@ -9,6 +10,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio" />
     <meta property="og:type" content="website" />
+    <link rel="stylesheet" href="devstyle.css">
 </head>
 <body>
     <nav>
