--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -6,7 +6,7 @@
     <title>Ali Raffee | Design Process</title>
     <meta name="description" content="The design process of Ali Raffee's portfolio.">
     <meta name="author" content="Ali Raffee">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio">
     <meta property="og:type" content="website">
 </head>
