--- a/profilefolder/profile.html
+++ b/profilefolder/profile.html
@@ -6,7 +6,7 @@
     <title>Ali Raffee | Profile</title>
     <meta name="description" content="The personal profile of Ali Raffee, including contact information.">
     <meta name="author" content="Ali Raffee">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio" />
     <meta property="og:type" content="website" />
 </head>
