--- a/blogsfolder/blogs.html
+++ b/blogsfolder/blogs.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The personal writings of Ali Raffee">
+    <title>Ali Raffee | Blogs</title>
     <meta name="author" content="Ali Raffee">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio">
     <meta property="og:type" content="website">
     <title>Blog page</title>
