--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -7,7 +7,7 @@
     <title>Ali Raffee | Projects and Dev Work</title>
     <meta name="description" content="The projects and game development work of Ali Raffee.">
     <meta name="author" content="Ali Raffee">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="devstyle.css">
