working css nav bar

--- a/blogsfolder/blogs.html
+++ b/blogsfolder/blogs.html
@@ -9,16 +9,20 @@
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio">
     <meta property="og:type" content="website">
+    <link rel="stylesheet" href="../stylefolder/navbar.css">
+    <link rel="stylesheet" href="../stylefolder/normalize.css">
     <title>Blog page</title>
 </head>
 <body class="h-card">
 
-    <nav>
-        <a href="../index.html">Index</a>
-        <a>Blogs</a>
-        <a href="../designfolder/design.html">Design</a>
-        <a href="../devfolder/dev.html">Projects</a>
-        <a href="../profilefolder/profile.html">Profile</a>
+  <nav>
+    <ul>
+      <li><a href="../index.html">Index</a></li>
+      <li><a class="active">Blogs</a></li>
+      <li><a href="../designfolder/design.html">Design</a></li>
+      <li><a href="../devfolder/dev.html">Projects </a></li>
+      <li><a href="../profilefolder/profile.html">Profile</a></li>
+    </ul>
     </nav>
     <hr>
 
