--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -9,29 +9,33 @@
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio">
     <meta property="og:type" content="website">
+    <link rel="stylesheet" href="../stylefolder/navbar.css">
+    <link rel="stylesheet" href="../stylefolder/normalize.css">
 </head>
 <body>
 
-<nav>
-    <a href="../index.html">Index</a>
-    <a href="../blogsfolder/blogs.html">Blogs</a>
-    <a>Design</a>
-    <a href="../devfolder/dev.html">Projects</a>
-    <a href="../profilefolder/profile.html">Profile</a>
-</nav>
+  <nav>
+    <ul>
+      <li><a href="../index.html">Index</a></li>
+      <li><a href="../blogsfolder/blogs.html">Blogs</a></li>
+      <li><a class="active">Design</a></li>
+      <li><a href="../devfolder/dev.html">Projects </a></li>
+      <li><a href="../profilefolder/profile.html">Profile</a></li>
+    </ul>
+    </nav>
 
 <hr>
 
 <h1 id="DesignTitle">Design</h1>
 
-<nav>
+
     <ul>
         <li><a href="#FirstAttempt">First Attempt</a></li>
         <li><a href="#Improvement">Improvement</a></li>
         <li><a href="#Current">Current Wireframes</a></li>
         <li><a href="#Reflection">Reflection</a></li>
     </ul>
-</nav>
+
 
 <h2 id="FirstAttempt" class="p-name">First attempt</h2>
 <article>
