--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -10,16 +10,19 @@
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio" />
     <meta property="og:type" content="website" />
-    <link rel="stylesheet" href="devstyle.css">
+    <link rel="stylesheet" href="../stylefolder/navbar.css">
+    <link rel="stylesheet" href="../stylefolder/normalize.css">
 </head>
 <body>
     <nav>
-        <a href="../index.html">Index</a>
-        <a href="../blogsfolder/blogs.html">Blogs</a>
-        <a href="../designfolder/design.html">Design</a>
-        <a>Projects</a>
-        <a href="../profilefolder/profile.html">Profile</a>
-    </nav>
+        <ul>
+          <li><a href="../index.html">Index</a></li>
+          <li><a href="../blogsfolder/blogs.html">Blogs</a></li>
+          <li><a href="../designfolder/design.html">Design</a></li>
+          <li><a class="active">Projects </a></li>
+          <li><a href="../profilefolder/profile.html">Profile</a></li>
+        </ul>
+        </nav>
 
     <hr />
 
