--- a/profilefolder/profile.html
+++ b/profilefolder/profile.html
@@ -9,15 +9,19 @@
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio" />
     <meta property="og:type" content="website" />
+    <link rel="stylesheet" href="../stylefolder/navbar.css">
+    <link rel="stylesheet" href="../stylefolder/normalize.css">
 </head>
 <body class="h-card">
     <nav>
-        <a href="../index.html">Index</a>
-        <a href="../blogsfolder/blogs.html">Blogs</a>
-        <a href="../designfolder/design.html">Design</a>
-        <a href="../devfolder/dev.html">Projects</a>
-        <a>Profile</a>
-    </nav>
+        <ul>
+          <li><a href="../index.html">Index</a></li>
+          <li><a href="../blogsfolder/blogs.html">Blogs</a></li>
+          <li><a href="../designfolder/design.html">Design</a></li>
+          <li><a href="../devfolder/dev.html">Projects </a></li>
+          <li><a class="active">Profile</a></li>
+        </ul>
+        </nav>
 
     <hr />
 
