--- a/profilefolder/profile.html
+++ b/profilefolder/profile.html
@@ -11,6 +11,7 @@
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="../stylefolder/navbar.css">
     <link rel="stylesheet" href="../stylefolder/normalize.css">
+    <link rel="stylesheet" href="profilestyle.css">
      <!-- Fonts. This is my personal comments not by chatgpt XD-->
      <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tektur:wght@600&display=swap" rel="stylesheet">
 
@@ -29,11 +30,24 @@
    
 
     <h1 class="p-name">Ali Raffee</h1>
-    <img class="u-photo" src="../images/ali.jpeg" width="250" height="250" alt="Sketch of Ali">
+    <img class="centreimage" src="../images/ali.jpeg" width="250" height="250" alt="Sketch of Ali">
 
+    <h2>About Me</h2>
+    
     <p class="p-summary">
-      I am currently a third-year Digital Arts Engineer, which means I have experience in both electrical engineering concepts and game design. My work spans across coding, design, and electronics, allowing me to approach projects from both a creative and technical perspective. I’m especially drawn to coding weird and wacky character controllers, exploring how players interact with games and how movement can feel unique and fun. I enjoy experimenting with different ways to bring characters and systems to life, often focusing on the mechanics that make an experience feel dynamic and engaging. Whether it’s through code or design, I aim to create interactive work that is playful, functional, and innovative.
-      </p>
+       <div class="parent">
+            <h3 class="=text-section">
+            I am a third-year Digital Arts Engineer based in South Africa
+            . I have experience in both electrical engineering concepts and game design.
+            </h3>
+            <img class="image-section" src="../images/ali.jpeg" width="250" height="250" alt="Sketch of Ali">
+       </div>
+        My work spans across coding, design, and electronics, allowing me to approach projects from both a creative and technical perspective.
+        I’m especially drawn to coding weird and wacky character controllers, exploring how players interact with games and how movement can feel 
+        unique and fun. I enjoy experimenting with different ways to bring characters and systems to life, often focusing on the mechanics that
+        make an experience feel dynamic and engaging. Whether it’s through code or design, I aim to create interactive work that is playful,
+        functional, and innovative.
+    </p>
       
 
     <h2>Skills</h2>
