--- a/blogsfolder/blogs.html
+++ b/blogsfolder/blogs.html
@@ -20,7 +20,7 @@
 
   <nav>
     <ul>
-      <li><a href="../index.html">Index</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a class="active">Blogs</a></li>
       <li><a href="../designfolder/design.html">Design</a></li>
       <li><a href="../devfolder/dev.html">Projects </a></li>
