--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -19,7 +19,7 @@
 
   <nav>
     <ul>
-      <li><a href="../index.html">Index</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a href="../blogsfolder/blogs.html">Blogs</a></li>
       <li><a class="active">Design</a></li>
       <li><a href="../devfolder/dev.html">Projects </a></li>
