--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -19,7 +19,7 @@
 <body>
     <nav>
         <ul>
-          <li><a href="../index.html">Index</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="../blogsfolder/blogs.html">Blogs</a></li>
           <li><a href="../designfolder/design.html">Design</a></li>
           <li><a class="active">Projects </a></li>
