--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -26,6 +26,7 @@
       <li><a href="../designfolder/design.html">Design</a></li>
       <li><a href="../devfolder/dev.html">Projects </a></li>
       <li><a href="../profilefolder/profile.html">Profile</a></li>
+      <li><a href="blog2.html">Blog2</a></li>
     </ul>
     </nav>
    
