--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -20,7 +20,7 @@
   <nav>
     <ul>
       <li><a href="../index.html">Home</a></li>
-      <li><a href="../blogsfolder/blogs.html">Blogs</a></li>
+      <li><a href="../blogsfolder/index.html">Blogs</a></li>
       <li><a class="active">Design</a></li>
       <li><a href="../devfolder/dev.html">Projects </a></li>
       <li><a href="../profilefolder/profile.html">Profile</a></li>
