--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
     <ul>
         <li><a class="active">Index</a></li>
-        <li><a href="blogsfolder/blogs.html">Blogs</a></li>
+        <li><a href="blogsfolder/index.html">Blogs</a></li>
         <li><a href="designfolder/design.html">Design</a></li>
         <li><a href="devfolder/dev.html">Projects </a></li>
         <li><a href="profilefolder/profile.html">Profile</a></li>
