working unpopulated blog section

--- a/blogsfolder/blog2.html
+++ b/blogsfolder/blog2.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="blogsstyles.css">
 
 <body class="h-card">
-  <nav>
+  <nav class="top-nav">
     <ul>
       <li><a href="../index.html">Home</a></li>
       <li><a class="active">Blogs</a></li>
