--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-  <nav>
+  <nav class="top-nav">
     <ul>
       <li><a href="../index.html">Home</a></li>
       <li><a href="../blogsfolder/index.html">Blogs</a></li>
