--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -19,7 +19,7 @@
 </head>
 <body class="h-card">
 
-  <nav>
+  <nav class="top-nav">
     <ul>
       <li><a href="../index.html">Home</a></li>
       <li><a class="active">Blogs</a></li>
