--- a/profilefolder/profile.html
+++ b/profilefolder/profile.html
@@ -17,7 +17,7 @@
 
 </head>
 <body class="h-card">
-    <nav>
+    <nav class="top-nav">
         <ul>
           <li><a href="../index.html">Home</a></li>
           <li><a href="../blogsfolder/index.html">Blogs</a></li>
