completed blog layout

--- a/blogsfolder/blog2.html
+++ b/blogsfolder/blog2.html
@@ -25,7 +25,7 @@
     <section class="layout">
       <nav class="blog-nav">
         <ul>
-        
+          <li><a href="index.html">Blog 1</a></li>
           <li><a href="blog2.html">Blog 2</a></li>
           <li><a href="blog3.html">Blog 3</a></li>
           <li><a href="blog4.html">Blog 4</a></li>
