completed design and projects pages

--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -196,7 +196,17 @@ One of my main inspirations is Adham Dannaway's website.</p>
 
 <a href="#DesignTitle">Back to top</a>
 
-<footer>
+<h2 id="FinalStage">Final Implementation</h2>
+<article>
+  <p>After beginning to bring CSS into my design, I realized that the colours I had originally chosen weren’t very appealing. The contrast was quite low, and the palette lacked vibrancy. I started to rethink my colour choices, reducing the number of colours and refining the type of colours I used. I still wanted to stick to the mood I originally aimed for, so I kept the black background with white body text, which gives the site a clean, modern feel while maintaining good readability.</p>
+
+  <p>As I began applying my styles, I noticed some layout and spacing issues that didn’t feel right in the browser, even though they worked in the wireframes. I made adjustments to padding, margins, and section spacing to give elements more room to breathe. I also decided to break up long text blocks using cards and containers to improve the structure and visual flow.</p>
+
+  <p>The button styling went through a few iterations as well. I experimented with hover states to make sure they felt interactive without being too flashy. I wanted everything to feel balanced, so I kept the font choices and text sizes consistent across the site.</p>
+
+  <p>Overall, while I stuck to the general layout and purpose from the original design plan, the implementation process helped me refine the visual details and usability. The end result is a more cohesive and responsive design that still reflects the goals I started with: clarity, minimalism, and personality.</p>
+</article>
+<a href="#DesignTitle">Back to top</a><footer>
     
     <em><small>Alulu Studios 2025</small></em>
 </footer>
