added home page as profile

--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -13,11 +13,11 @@
 <body class="h-card">
   <nav class="top-nav">
     <ul>
-      <li><a href="../index.html">Home</a></li>
+      <li><a href="../profilefolder/profile.html">Home</a></li>
       <li><a class="active">Blogs</a></li>
       <li><a href="../designfolder/design.html">Design</a></li>
       <li><a href="../devfolder/dev.html">Projects</a></li>
-      <li><a href="../profilefolder/profile.html">Profile</a></li>
+ 
     </ul>
   </nav>
 
