--- a/profilefolder/profile.html
+++ b/profilefolder/profile.html
@@ -19,11 +19,11 @@
 <body class="h-card">
     <nav class="top-nav">
         <ul>
-          <li><a href="../index.html">Home</a></li>
+          <li><a class="active">Home</a></li>
           <li><a href="../blogsfolder/index.html">Blogs</a></li>
           <li><a href="../designfolder/design.html">Design</a></li>
           <li><a href="../devfolder/dev.html">Projects </a></li>
-          <li><a class="active">Profile</a></li>
+          
         </ul>
         </nav>
 
