--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -19,11 +19,11 @@
 
   <nav class="top-nav">
     <ul>
-      <li><a href="../index.html">Home</a></li>
+      <li><a href="../profilefolder/profile.html">Home</a></li>
       <li><a href="../blogsfolder/index.html">Blogs</a></li>
       <li><a class="active">Design</a></li>
       <li><a href="../devfolder/dev.html">Projects </a></li>
-      <li><a href="../profilefolder/profile.html">Profile</a></li>
+     
     </ul>
     </nav>
 
