--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -19,11 +19,11 @@
 <body>
   <nav class="top-nav">
     <ul>
-      <li><a href="../index.html">Home</a></li>
+      <li><a href="../profilefolder/profile.html">Home</a></li>
       <li><a href="../blogsfolder/index.html">Blogs</a></li>
       <li><a href="../designfolder/design.html">Design</a></li>
       <li><a class="active">Projects</a></li>
-      <li><a href="../profilefolder/profile.html">Profile</a></li>
+    
     </ul>
   </nav>
 
@@ -72,7 +72,44 @@
           </a>
     </article>
   </section>
-</main>
+  <section class="projects-grid">
+    <article class="project-card">
+      <h2>Photography</h2>
+  
+      <figure>
+        <img src="" alt="picture of my dad" />
+        <figcaption>
+          <h2>Portrait</h2>
+        </figcaption>
+      </figure>
+      <figure>  
+        <img src="" alt="picture of grandmother" />
+        <figcaption>
+          <h2>Portrait</h2>
+        </figcaption>
+      </figure>
+    </article>
+  </section>
+  <section class="projects-grid">
+    <article class="project-card">
+      <h2>art</h2>
+      <figure>
+        <img src="" alt="artwork" />
+        <figcaption>
+          <h2>Artwork</h2>
+        </figcaption>
+      </figure>
+      <figure>  
+        <img src="" alt="artwork" />
+        <figcaption>
+          <h2>Artwork</h2>
+        </figcaption>
+      </figure>
+    </article>
+  </section>
+
+
+    </main>
   <footer>
     <em><small>Alulu Studios 2025</small></em>
   </footer>
