add reactivity fix to blog css double column

--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -36,7 +36,8 @@
       </nav>
 
       <section class="blog-content">
-        <h1 class="p-name">Exploring the Internet and My GitHub Experience</h1>
+        <h1>Blogs</h1>
+        <h2 class="p-name">Exploring the Internet and My GitHub Experience</h2>
 <article>
   <p class="e-content">
     <strong>Readings:</strong>  
