design and blog pages fully updated

--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../stylefolder/normalize.css">
      <!-- Fonts. This is my personal comments not by chatgpt XD-->
      <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tektur:wght@600&display=swap" rel="stylesheet">
-
+     <link rel="stylesheet" href="designstyle.css">
 </head>
 <body>
 
@@ -32,12 +32,16 @@
 <h1 id="DesignTitle">Design</h1>
 
 
-    <ul>
-        <li><a href="#FirstAttempt">First Attempt</a></li>
-        <li><a href="#Improvement">Improvement</a></li>
-        <li><a href="#Current">Current Wireframes</a></li>
-        <li><a href="#Reflection">Reflection</a></li>
-    </ul>
+<nav class="sub-nav">
+  <ul>
+    <li><a href="#FirstAttempt">First Attempt</a></li>
+    <li><a href="#Improvement">Improvement</a></li>
+    <li><a href="#Current">Current Wireframes</a></li>
+    <li><a href="#Reflection">Reflection</a></li>
+    <li><a href="#FinalStage">Final Implementation</a></li>
+  </ul>
+</nav>
+
 
 
 <h2 id="FirstAttempt" class="p-name">First attempt</h2>
@@ -205,6 +209,8 @@ One of my main inspirations is Adham Dannaway's website.</p>
   <p>The button styling went through a few iterations as well. I experimented with hover states to make sure they felt interactive without being too flashy. I wanted everything to feel balanced, so I kept the font choices and text sizes consistent across the site.</p>
 
   <p>Overall, while I stuck to the general layout and purpose from the original design plan, the implementation process helped me refine the visual details and usability. The end result is a more cohesive and responsive design that still reflects the goals I started with: clarity, minimalism, and personality.</p>
+  <p>I've realised that the original index page i want to use wont be applicable for the css website as the picture functinality i wnat to implament requires javascript. Without this it makes the index page quite redundant. i have therefore removed it for this submission and have put the profile page as the index/homepage. </p>
+  <p>I have decided to leave out the essay page as it is just empty, this would be a redundant and useless button that could add confusion to the website.</p>
 </article>
 <a href="#DesignTitle">Back to top</a><footer>
     
