general images updated

--- a/blogsfolder/blog6.html
+++ b/blogsfolder/blog6.html
@@ -56,14 +56,14 @@
           <ul>
             <li>
               <figure>
-                <img class="u-photo" src="" width="250" height="250" alt="Colour palette inspiration 1">
-                <figcaption>fragpunk 1</figcaption>
+                <img class="u-photo" src="../images/fragpunk_nwtk.jpg" width="40%" height="40%" alt="Colour palette inspiration 1">
+                <figcaption>fragpunk cover art</figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <img class="u-photo" src="" width="250" height="250" alt="Colour palette inspiration 2">
-                <figcaption>fragpunk 2</figcaption>
+                <img class="u-photo" src="../images/fragpunk2.png" width="40%" height="30%" alt="Colour palette inspiration 2">
+                <figcaption>fragpunk website</figcaption>
               </figure>
             </li>
           </ul>
