--- a/blogsfolder/blog7.html
+++ b/blogsfolder/blog7.html
@@ -48,7 +48,7 @@
           <ul>
             <li>
               <figure>
-                <img class="u-photo" src="" width="250" height="250" alt="Johannesburg Zoo Screenshot">
+                <img class="u-photo" src="../images/Screenshot 2025-03-29 215004.png" width="250" height="250" alt="Johannesburg Zoo Screenshot">
                 <figcaption>The jhbcityparksandzoo</figcaption>
               </figure>
             </li>
@@ -87,7 +87,7 @@
           <ul>
             <li>
               <figure>
-                <img class="u-photo" src="" width="250" height="250" alt="Parktown Boys Screenshot">
+                <img class="u-photo" src="../images/Screenshot 2025-03-29 230549.png" width="250" height="250" alt="Parktown Boys Screenshot">
                 <figcaption>Parktown</figcaption>
               </figure>
             </li>
