--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -19,7 +19,7 @@
 <body>
   <nav class="top-nav">
     <ul>
-      <li><a href="../profilefolder/profile.html">Home</a></li>
+      <li><a href="../Index.html">Home</a></li>
       <li><a href="../blogsfolder/index.html">Blogs</a></li>
       <li><a href="../designfolder/design.html">Design</a></li>
       <li><a class="active">Projects</a></li>
