--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
     <p class="p-summary">
        <article class="parent">
             <h3 class="text-section">
-            I am a third-year Digital Arts Engineer based in South Africa
-            . I have experience in both electrical engineering concepts and game design.
+            I am a third-year Digital Arts Engineer based in South Africa. I have experience in both electrical engineering concepts and game design.
             My work spans across coding, design, and electronics, allowing me to approach projects from both a creative and technical perspective.
             I’m especially drawn to coding weird and wacky character controllers, exploring how players interact with games and how movement can feel 
             unique and fun. I enjoy creating interactive work that is playful,
@@ -54,40 +53,52 @@
     <ul class="tech-logos">
         
         <li>
+          <a href="https://unity.com/" target="_blank">
             <figure>
               <img class="uphoto" src="profilefolder/images/unity.png" alt="unity logo">
               <figcaption>Unity</figcaption>
             </figure>
+          </a>
         </li>
         <li>
+          <a href="https://www.python.org/" target="_blank">
             <figure>
               <img class="uphoto" src="profilefolder/images/python.png" alt="python logo">
               <figcaption>Python</figcaption>
             </figure>
+          </a>
         </li>
         <li>
+          <a href="https://learn.microsoft.com/en-us/cpp/?view=msvc-170" target="_blank"> 
             <figure>
               <img class="uphoto" src="profilefolder/images/icons8-c++-144-2.png" alt="c++ logo">
               <figcaption>C++</figcaption>
             </figure>
+          </a>
         </li>   
         <li>
+          <a href="https://learn.microsoft.com/en-us/dotnet/csharp/tour-of-csharp/" target="_blank">
             <figure>
                 <img src="profilefolder/images/c-sharp.png" alt="c# logo" class="uphoto">
                 <figcaption>C#</figcaption>
             </figure>
+          </a>
         </li>
         <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
             <figure>
               <img class="uphoto" src="profilefolder/images/html.png" width="250" height="250" alt="html logo">
               <figcaption>HTML</figcaption>
             </figure>
+            </a>
         </li>
         <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
             <figure>
               <img class="uphoto" src="profilefolder/images/css-3.png" width="250" height="250" alt="css logo">
               <figcaption>CSS</figcaption>
             </figure>
+          </a>
         </li>
         
     </ul>
