attempted blogs mobile fix

--- a/blogsfolder/blog6.html
+++ b/blogsfolder/blog6.html
@@ -50,7 +50,9 @@
             The images below show my main inspiration for the colour palette. I’m drawn to this style because 
             I want to use bright colours against a dark background to enhance readability and create vivid, eye-catching visuals. 
             This approach should result in a bold website that uses minimal colours and simple elements. 
-            The simplicity of this design will make it easier to maintain a cohesive and polished look.
+            The simplicity of this design will make it easier to maintain a cohesive and polished look. 
+            I find the use of sharp edges and bold imagery worls well for "Frag punk" as it creates a bold and intensive look.
+            Howvere for the more soft and approachable side of my portfolio, I want to use softer shapes and colours.
           </p>
         
           <ul>
