attempt at solving random naviagation error to homepage

--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -19,7 +19,7 @@
 
   <nav class="top-nav">
     <ul>
-      <li><a href="../Index.html">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a href="../blogsfolder/index.html">Blogs</a></li>
       <li><a class="active">Design</a></li>
       <li><a href="../devfolder/dev.html">Projects </a></li>
