--- a/blogsfolder/blog3.html
+++ b/blogsfolder/blog3.html
@@ -13,7 +13,7 @@
 <body class="h-card">
   <nav class="top-nav">
     <ul>
-      <li><a href="../Index.html">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a class="active">Blogs</a></li>
       <li><a href="../designfolder/design.html">Design</a></li>
       <li><a href="../devfolder/dev.html">Projects</a></li>
