fixed major blogs reactivit issue

--- a/blogsfolder/blog7.html
+++ b/blogsfolder/blog7.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="The personal writings of Ali Raffee">
@@ -9,6 +13,7 @@
 <link rel="stylesheet" href="../stylefolder/navbar.css">
 <link rel="stylesheet" href="../stylefolder/normalize.css">
 <link rel="stylesheet" href="blogsstyles.css">
+</head>
 
 <body class="h-card">
   <nav class="top-nav">
@@ -48,7 +53,7 @@
           <ul>
             <li>
               <figure>
-                <img class="u-photo" src="../images/Screenshot 2025-03-29 215004.png" width="50%" height="40%" alt="Johannesburg Zoo Screenshot">
+                <img class="u-photo" src="../images/Screenshot 2025-03-29 215004.png" width="30%" height="20%" alt="Johannesburg Zoo Screenshot">
                 <figcaption>The jhbcityparksandzoo</figcaption>
               </figure>
             </li>
@@ -87,7 +92,7 @@
           <ul>
             <li>
               <figure>
-                <img class="u-photo" src="../images/Screenshot 2025-03-29 230549.png" width="50%" height="40%" alt="Parktown Boys Screenshot">
+                <img class="u-photo" src="../images/Screenshot 2025-03-29 230549.png" width="30%" height="20%" alt="Parktown Boys Screenshot">
                 <figcaption>Parktown</figcaption>
               </figure>
             </li>
