--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="The personal writings of Ali Raffee">
@@ -9,7 +13,7 @@
 <link rel="stylesheet" href="../stylefolder/navbar.css">
 <link rel="stylesheet" href="../stylefolder/normalize.css">
 <link rel="stylesheet" href="blogsstyles.css">
-
+</head>
 <body class="h-card">
   <nav class="top-nav">
     <ul>
