--- a/profilefolder/index.html
+++ b/profilefolder/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="stylefolder/navbar.css">
     <!-- Fonts. This is my personal comments not by chatgpt XD-->
     <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tektur:wght@600&display=swap" rel="stylesheet">
+    <script src="test.js" defer></script>
   </head>
 <body class="h-card">
     <nav class="top-nav">
