--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -11,6 +11,7 @@
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="../stylefolder/navbar.css">
     <link rel="stylesheet" href="../stylefolder/normalize.css">
+     <script src="script.js"></script>
      <!-- Fonts. This is my personal comments not by chatgpt XD-->
      <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tektur:wght@600&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="designstyle.css">
@@ -212,10 +213,69 @@ One of my main inspirations is Adham Dannaway's website.</p>
   <p>I've realised that the original index page i want to use wont be applicable for the css website as the picture functinality i wnat to implament requires javascript. Without this it makes the index page quite redundant. i have therefore removed it for this submission and have put the profile page as the index/homepage. </p>
   <p>I have decided to leave out the essay page as it is just empty, this would be a redundant and useless button that could add confusion to the website.</p>
 </article>
-<a href="#DesignTitle">Back to top</a><footer>
+<a href="#DesignTitle">Back to top</a>
+
+
+  <section class="timeline-section">
+    <h2 class="timeline-title">Design Process</h2>
+    <div class="timeline-container">
+      <div class="timeline-line"></div>
+
+  <article class="timeline-block left">
+    <div class="timeline-marker"></div>
+      <div class="timeline-content">
+        <h3>Week 1: Research</h3>
+        <p>Conducted user interviews and analyzed competitor websites.</p>
+        <div class="more-text">
+          <p>We focused on accessibility, mobile responsiveness, and how users interact with visual hierarchy in digital interfaces.</p>
+        </div>
+      <button class="read-more-btn">Read more</button>
+    </div>
+  </article>
+
+
+
+
+
+
+      <article class="timeline-block right">
+        <div class="timeline-marker"></div>
+        <div class="timeline-content">
+          <h3>Week 2: Wireframes</h3>
+          <p>Sketched low-fidelity wireframes and reviewed with peers.</p>
+          <div class="more-text">
+            <p>We focused on accessibility, mobile responsiveness, and how users interact with visual hierarchy in digital interfaces.</p>
+          </div>
+          <button class="read-more-btn">Read more</button>
+        </div>
+      </article>
+
+      <article class="timeline-block left">
+        <div class="timeline-marker"></div>
+        <div class="timeline-content">
+          <h3>Week 3: Prototyping</h3>
+          <p>Built interactive prototypes using Figma.</p>
+        </div>
+      </article>
+
+      <article class="timeline-block right">
+        <div class="timeline-marker"></div>
+        <div class="timeline-content">
+          <h3>Week 4: Testing</h3>
+          <p>Conducted usability tests and iterated on design.</p>
+        </div>
+      </article>
+    </div>
+  </section>
+
+ 
+
+  
+</body>
+
+<footer>
     
     <em><small>Alulu Studios 2025</small></em>
 </footer>
 
-</body>
 </html>
