fixed hamburger menu

--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -19,6 +19,7 @@
 <body>
 
   <nav class="top-nav">
+     <div class="nav-container">
     <ul>
       <li><a href="../index.html">Home</a></li>
       <li><a href="../blogsfolder/index.html">Blogs</a></li>
@@ -26,6 +27,12 @@
       <li><a href="../devfolder/dev.html">Projects </a></li>
      
     </ul>
+     <button class="burger nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </button>
+  </div>
     </nav>
 
 
@@ -214,7 +221,7 @@ One of my main inspirations is Adham Dannaway's website.</p>
   <p>I have decided to leave out the essay page as it is just empty, this would be a redundant and useless button that could add confusion to the website.</p>
 </article>
 <a href="#DesignTitle">Back to top</a>
-
+  
 
   <section class="timeline-section">
     <h2 class="timeline-title">Design Process</h2>
