--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -16,15 +16,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&family=Barlow+Condensed:wght@400;700&family=Tektur:wght@600&display=swap" rel="stylesheet" />
 </head>
 <main>
-<body>
+<body class="h-card">
   <nav class="top-nav">
-    <ul>
+    <ul class="nav-links">
+       <div class="nav-container">
       <li><a href="../index.html">Home</a></li>
       <li><a href="../blogsfolder/index.html">Blogs</a></li>
       <li><a href="../designfolder/design.html">Design</a></li>
       <li><a class="active">Projects</a></li>
-    
-    </ul>
+      </ul>
+      <button class="burger nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </button>
+   
+    </div>
+  
   </nav>
 
   <h1>Projects</h1>
@@ -88,7 +96,7 @@
     </article>
   </section>
   <section class="projects-grid">
-    
+     <script src="../scriptsfolder/overall.js"></script>
 
     </main>
   <footer>
