--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -20,7 +20,7 @@
 
   <nav class="top-nav">
      <div class="nav-container">
-    <ul>
+    <ul class="nav-links">
       <li><a href="../index.html">Home</a></li>
       <li><a href="../blogsfolder/index.html">Blogs</a></li>
       <li><a class="active">Design</a></li>
@@ -277,7 +277,7 @@ One of my main inspirations is Adham Dannaway's website.</p>
 
  
 
-  
+  <script src="../scriptsfolder/overall.js"></script>
 </body>
 
 <footer>
