working index blog page final

--- a/blogsfolder/blog2.html
+++ b/blogsfolder/blog2.html
@@ -123,6 +123,8 @@
         
       </section>
     </section>
+     <script src="../scriptsfolder/overall.js"></script>
+     <script src="script.js"></script>
   </main>
 
   <footer>
