--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -24,7 +24,7 @@
       <li><a href="../devfolder/dev.html">Projects</a></li>
  
     </ul>
-    <button class="burger nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+    <button class="burger nav-toggle">
         <div class="line1"></div>
         <div class="line2"></div>
         <div class="line3"></div>
@@ -49,22 +49,23 @@
       <section class="blog-content">
         <h1>Blogs</h1>
         <h2 class="p-name">Exploring the Internet and My GitHub Experience</h2>
-         <div id="typed-blog">
-<article id="blog-source">
-  <p class="e-content">
+        <div id="typed-blog"></div>
+<article id="blog-source" >
+   
+        <p class="e-content">
     <strong>Readings:</strong>  
     <em>The Library of Babel</em> by Jorge Luis Borges (1941);  
-    <em>A Revealing Look at the Dot-Com Bubble of 2000 — And How It Shapes Our Lives Today</em> by Brian McCullough;  
+    <em>A Revealing Look at the Dot-Com Bubble of 2000, and How It Shapes Our Lives Today</em> by Brian McCullough;  
     <em>Flash and Its History on the Web</em>
   </p>
 
   <p class="e-content">
     <strong>GitHub Experience:</strong><br>
-    My experience with GitHub is always a bit tumultuous. It usually starts well — setting it up is quick and painless — but updating it becomes problematic. I found publishing my empty website surprisingly easy. In just a few steps, I had created and shared a path to my site with the world.
+    My experience with GitHub is always a bit tumultuous. It usually starts well ,setting it up is quick and painless , but updating it becomes problematic. I found publishing my empty website surprisingly easy. In just a few steps, I had created and shared a path to my site with the world.
   </p>
 
   <p class="e-content">
-    Borges’ <em>The Library of Babel</em> suddenly felt very relatable. In this short story, Borges describes a universe where every possible piece of writing — both truth and falsehood — exists within an infinite labyrinth of books. Similarly, the internet, which can be seen as a modern library of human knowledge, is a chaotic network where anyone can add content — including empty and useless websites like mine.
+    Borges’ <em>The Library of Babel</em> suddenly felt very relatable. In this short story, Borges describes a universe where every possible piece of writing ( both truth and falsehood ) exists within an infinite labyrinth of books. Similarly, the internet, which can be seen as a modern library of human knowledge, is a chaotic network where anyone can add content, including empty and useless websites like mine.
   </p>
 
   <p class="e-content">
@@ -77,7 +78,7 @@
   </p>
 
   <p class="e-content">
-    In the case of the dot-com bubble, massive investments flowed into countless startups, inflating their value far beyond their actual potential. I see parallels today with the rise of Generative AI (GAI). Companies like OpenAI experienced skyrocketing investments despite large operational losses. When DeepSeek’s AI was released and outperformed OpenAI’s in some areas, it exposed the overvaluation of their tech — a modern echo of the bubble pop.
+    In the case of the dot-com bubble, massive investments flowed into countless startups, inflating their value far beyond their actual potential. I see parallels today with the rise of Generative AI (GAI). Companies like OpenAI experienced skyrocketing investments despite large operational losses. When DeepSeek’s AI was released and outperformed OpenAI’s in some areas, it exposed the overvaluation of their tech, a modern echo of the bubble pop.
   </p>
 
   <p class="e-content">
@@ -97,8 +98,10 @@
     <strong>My Goals for the Course:</strong><br>
     I want to dive deeper into the coding intricacies of HTML, CSS, and JavaScript. More importantly, I aim to understand what makes a good user interface. I often struggle with creating simple and user-friendly UI in my games. Through this course, I hope to learn the theories and practices that make UI intuitive and engaging.
   </p>
+
 </article>
-</div>
+
+
     </section>
   </main>
 
