major overhaul of microformatting and meta data

--- a/designfolder/design.html
+++ b/designfolder/design.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ali Raffee | Design Process</title>
-    <meta name="description" content="The design process of Ali Raffee's portfolio.">
-    <meta name="author" content="Ali Raffee">
+    <meta name="description" content="The design process of creating this website" />
+    <meta author="Ali Raffee" />
+    <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, Portfolio, design, design process, creation" />
+
     <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Ali Raffee's Portfolio">
     <meta property="og:type" content="website">
@@ -282,7 +284,6 @@ One of my main inspirations is Adham Dannaway's website.</p>
 
 <footer>
     
-    <em><small>Alulu Studios 2025</small></em>
-</footer>
+Alulu Studios 2025</footer>
 
 </html>
