--- a/devfolder/dev.html
+++ b/devfolder/dev.html
@@ -4,9 +4,11 @@
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ali Raffee | Projects and Dev Work</title>
-  <meta name="description" content="The projects and game development work of Ali Raffee." />
-  <meta name="author" content="Ali Raffee" />
+  <title>Ali Raffee Projects page </title>
+  <meta name="description" content="showcase of projects in languages python, C++, C# aswelll as photography" />
+  <meta author="Ali Raffee" />
+  <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, Portfolio, Projects, Game Development, Photography" />
+
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
   <meta property="og:title" content="Ali Raffee's Portfolio" />
   <meta property="og:type" content="website" />
@@ -16,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&family=Barlow+Condensed:wght@400;700&family=Tektur:wght@600&display=swap" rel="stylesheet" />
 </head>
 <main>
-<body class="h-card">
+<body >
   <nav class="top-nav">
    <div class="nav-container">
     <ul class="nav-links">
@@ -102,7 +104,6 @@
 
     </main>
   <footer>
-    <em><small>Alulu Studios 2025</small></em>
-  </footer>
+Alulu Studios 2025  </footer>
 </body>
 </html>
