--- a/profilefolder/index.html
+++ b/profilefolder/index.html
@@ -41,7 +41,6 @@
 
     <footer>
      
-        <em><small>Alulu Studios 2025</small></em>
-    </footer>
+Alulu Studios 2025    </footer>
 </body>
 </html>
