--- a/blogsfolder/blog3.html
+++ b/blogsfolder/blog3.html
@@ -4,9 +4,10 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="The personal writings of Ali Raffee">
-<title>Ali Raffee | Blogs3</title>
-<meta name="author" content="Ali Raffee">
+title>Ali Raffee third Blog</title>
+ <meta name="description" content="Blog about UI and Ux user experience " />
+  <meta author="Ali Raffee" />
+  <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, UI, UX, user experience " />
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <meta property="og:title" content="Ali Raffee's Portfolio">
 <meta property="og:type" content="website">
@@ -14,7 +15,7 @@
 <link rel="stylesheet" href="../stylefolder/normalize.css">
 <link rel="stylesheet" href="blogsstyles.css">
 </head>
-<body class="h-card">
+<body >
  <nav class="top-nav">
      <div class="nav-container">
    <ul class="nav-links">
@@ -117,7 +118,6 @@
   </main>
 
   <footer>
-    <em><small>Alulu Studios 2025</small></em>
-  </footer>
+Alulu Studios 2025  </footer>
 </body>
 </html>
