--- a/blogsfolder/blog5.html
+++ b/blogsfolder/blog5.html
@@ -4,9 +4,10 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="The personal writings of Ali Raffee">
-<title>Ali Raffee | Blogs5</title>
-<meta name="author" content="Ali Raffee">
+<title>Ali Raffee fifth Blog</title>
+<meta name="description" content="Second rendition of wireframe with html and css " />
+  <meta author="Ali Raffee" />
+  <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, wireframe, updated wireframe, css" />
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <meta property="og:title" content="Ali Raffee's Portfolio">
 <meta property="og:type" content="website">
@@ -14,7 +15,7 @@
 <link rel="stylesheet" href="../stylefolder/normalize.css">
 <link rel="stylesheet" href="blogsstyles.css">
 </head>
-<body class="h-card">
+<body >
  <nav class="top-nav">
      <div class="nav-container">
    <ul class="nav-links">
@@ -135,7 +136,6 @@
   </main>
 
   <footer>
-    <em><small>Alulu Studios 2025</small></em>
-  </footer>
+Alulu Studios 2025  </footer>
 </body>
 </html>
