--- a/blogsfolder/blog7.html
+++ b/blogsfolder/blog7.html
@@ -4,9 +4,10 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="The personal writings of Ali Raffee">
-<title>Ali Raffee | Blogs7</title>
-<meta name="author" content="Ali Raffee">
+<title>Ali Raffee sixth Blog</title>
+<meta name="description" content="Blog about design elements such as colour palletes, fonts and UI elements " />
+  <meta author="Ali Raffee" />
+  <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, colour palletes, fonts, UI elements, colour palletes  " />
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <meta property="og:title" content="Ali Raffee's Portfolio">
 <meta property="og:type" content="website">
@@ -15,7 +16,7 @@
 <link rel="stylesheet" href="blogsstyles.css">
 </head>
 
-<body class="h-card">
+<body >
  <nav class="top-nav">
      <div class="nav-container">
    <ul class="nav-links">
@@ -130,7 +131,6 @@
   </main>
 
   <footer>
-    <em><small>Alulu Studios 2025</small></em>
-  </footer>
+Alulu Studios 2025  </footer>
 </body>
 </html>
