--- a/blogsfolder/index.html
+++ b/blogsfolder/index.html
@@ -4,9 +4,12 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="The personal writings of Ali Raffee">
-<title>Ali Raffee | Blogs1</title>
-<meta name="author" content="Ali Raffee">
+
+<title>Ali Raffee Blog Page</title>
+ <meta name="description" content="The first blog, talking about my experience with the internet and using github for the first time." />
+  <meta author="Ali Raffee" />
+  <meta name="keywords" content="Ali Raffee, Digital Arts Engineer, internet, GitHub" />
+
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <meta property="og:title" content="Ali Raffee's Portfolio">
 <meta property="og:type" content="website">
@@ -14,7 +17,7 @@
 <link rel="stylesheet" href="../stylefolder/normalize.css">
 <link rel="stylesheet" href="blogsstyles.css">
 </head>
-<body class="h-card">
+<body >
   <nav class="top-nav">
      <div class="nav-container">
    <ul class="nav-links">
@@ -108,7 +111,7 @@
      <script src="../scriptsfolder/overall.js"></script>
      <script src="script.js"></script>
   <footer>
-    <em><small>Alulu Studios 2025</small></em>
+    Alulu Studios 2025
   </footer>
 </body>
 </html>
